--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  json_annotation: ^4.4.0
+  json_annotation: 3.1.1
 dev_dependencies:
   integration_test:
     sdk: flutter
